main.sass: Fix offscreen word wrapping and horizontal scrollbars
Horizontal scrollbars would appear on mobile because words were being
wrapped offscreen, to remedy this, I have to set "overflow-x: hidden" to
hide the scrollbars and "word-break: break-word" to break words that are
too long and unable to wrap properly.

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -13,12 +13,14 @@ body
   -ms-hyphens: auto
   -webkit-hyphens: auto
   margin: 0
+  overflow-x: hidden
 
 main
   text-align: justify
   max-width: 1000px
   margin: 20px auto
   padding: 0
+  word-break: break-word
 
 #page-container
   min-height: 100vh
